fixed work grid image overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,37 +91,31 @@ header nav ul li a:hover {
 /* Portfolio Samples */
 .work-grid {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(3, 1fr);
+    justify-content: center;
+    grid-template-columns: repeat(3, 20%);
+    grid-template-rows: repeat(3, 20%);
     gap: 5px;
-    margin-left: 15%;
-    margin-right: 15%;
+    margin-left: 10%;
+    margin-right: 10%;
+}
+.app1, .app2, .app3, .app4, .app5, .app6 {
+    overflow: hidden;
 }
 .grid-image img {
     max-width: 100%;
-    height: auto;
+    max-height: 100%;
+    filter: grayscale(100%);
+    transition-property: filter;
+    transition-duration: .5s;
+}
+.grid-image img:hover {
+    filter: grayscale(0%);
 }
 .work-grid .app1 {
     grid-row: 1 / 3;
     grid-column: 1 / 3;
-    background-color: red;
-    overflow: inherit;
 }
-.work-grid .app2 {
-    background-color: orange;
-}
-.work-grid .app3 {
-    background-color: yellow;
-}
-.work-grid .app4 {
-    background-color: green;
-}
-.work-grid .app5 {
-    background-color: blue;
-}
-.work-grid .app6 {
-    background-color: purple;
-}
+
 /* Contact */
 .contact-links {
     display: grid;
